--- a/React_Lucky_Frontend/package.json
+++ b/React_Lucky_Frontend/package.json
@@ -12,7 +12,8 @@
     "react-hook-form": "^6.3.0",
     "react-router-dom": "^5.3.1",
     "react-scripts": "3.4.1",
-    "sass": "^1.50.1"
+    "sass": "^1.50.1",
+    "swiper": "^8.0.7"
   },
   "scripts": {
     "start": "react-scripts start --env.API_URL=http://localhost:8000",
