--- a/React-Lucky_Backend/package.json
+++ b/React-Lucky_Backend/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.29.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "date-fns": "^2.15.0",
@@ -50,6 +51,7 @@
     "mongoose": "^5.9.27",
     "mongoose-paginate-v2": "^1.3.9",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "nodemailer": "^6.4.11",
     "nodemailer-mailgun-transport": "^2.0.0",
     "passport": "^0.4.1",
