--- a/React_Lucky_Frontend/.env
+++ b/React_Lucky_Frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACK_URL=http://localhost:5000
+REACT_APP_BACK_URL=https://luismrtinez.com
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyDv2W4zkf-OMEH7-arAoe55APu-U0JX-ZU
