--- a/React_Lucky_Frontend/package.json
+++ b/React_Lucky_Frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/combobox": "^0.17.0",
     "@react-google-maps/api": "^2.8.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -12,10 +13,12 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.25.3",
+    "react-responsive-combo-box": "^1.3.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "sass": "^1.50.1",
     "swiper": "^8.1.4",
+    "use-places-autocomplete": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
